--- a/app/src/main/res/layout/landing_activity.xml
+++ b/app/src/main/res/layout/landing_activity.xml
@@ -35,11 +35,33 @@
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
+    <TextView
+        android:id="@+id/not_granted_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/version"
+        android:text="@string/grantfailed"
+        android:textColor="@android:color/holo_orange_dark"
+        android:visibility="gone"
+        />
+
+    <Button
+        android:id="@+id/grant_button"
+        android:layout_width="@dimen/zero_dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/not_granted_text_view"
+        android:text="@string/grant"
+        android:visibility="gone"
+        />
+
     <Button
         android:id="@+id/rate_now"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/please_rate"
-        app:layout_constraintTop_toBottomOf="@id/version"
+        app:layout_constraintTop_toBottomOf="@id/grant_button"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
