Minor fixes in video player

--- a/app/src/main/res/layout/video_player_fragment.xml
+++ b/app/src/main/res/layout/video_player_fragment.xml
@@ -8,6 +8,7 @@
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:controller_layout_id="@layout/exo_playback_controller_view"
         />
 
 </RelativeLayout>
