--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="zero_dp">0dp</dimen>
+    <dimen name="eight_dp">8dp</dimen>
     <dimen name="material_generic">16dp</dimen>
-
     <dimen name="material_sheet_peek_height">400dp</dimen>
 </resources>
