--- a/app/src/main/res/layout/audio_player_dialog_activity.xml
+++ b/app/src/main/res/layout/audio_player_dialog_activity.xml
@@ -20,12 +20,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/material_generic"
         />
-    <ImageButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/play_button"
-        android:src="@drawable/ic_baseline_pause_32"
+        app:srcCompat="@drawable/ic_baseline_pause_32"
+        app:fabSize="mini"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_button"
         app:layout_constraintTop_toBottomOf="@id/seekbar"
         app:layout_constraintLeft_toLeftOf="@id/parent"
         app:layout_constraintRight_toRightOf="@id/parent"
