--- a/app/src/main/res/layout/audio_player_notification_big.xml
+++ b/app/src/main/res/layout/audio_player_notification_big.xml
@@ -4,28 +4,51 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-    <TextView
-        android:id="@+id/audio_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:ellipsize="middle"
-        android:textStyle="bold"
-        android:layout_marginLeft="@dimen/material_generic"
-        android:layout_marginStart="@dimen/material_generic"
-        style="@style/TextAppearance.Compat.Notification.Info"
-        />
-    <TextView
-        android:id="@+id/audio_artist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/material_generic"
-        android:layout_marginStart="@dimen/material_generic"
-        android:singleLine="true"
-        android:ellipsize="middle"
-        style="@style/TextAppearance.Compat.Notification.Info"
-        android:visibility="invisible"
-        />
+        android:orientation="horizontal"
+        >
+        <ImageView
+            android:id="@+id/album_image"
+            android:layout_width="@dimen/notification_large_icon_width"
+            android:layout_height="@dimen/notification_large_icon_width"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/round_button"
+            />
+        <LinearLayout
+            android:id="@+id/titles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/audio_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:ellipsize="middle"
+                android:textStyle="bold"
+                android:layout_marginLeft="@dimen/material_generic"
+                android:layout_marginStart="@dimen/material_generic"
+                style="@style/TextAppearance.Compat.Notification.Info"
+                />
+            <TextView
+                android:id="@+id/audio_artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/material_generic"
+                android:layout_marginStart="@dimen/material_generic"
+                android:singleLine="true"
+                android:ellipsize="middle"
+                style="@style/TextAppearance.Compat.Notification.Info"
+                android:visibility="invisible"
+                />
+        </LinearLayout>
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/audio_progress"
@@ -40,22 +63,41 @@
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         >
-        <ImageButton
-            android:id="@+id/button_previous"
-            android:layout_width="@dimen/zero_dp"
+        <ImageView
+            android:id="@+id/action_previous"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            />
-        <ImageButton
-            android:id="@+id/button_play"
-            android:layout_width="@dimen/zero_dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_outline_fast_rewind_32"
+            android:gravity="center"
+            android:padding="8dp"
+            android:scaleType="fitCenter" />
+        <ImageView
+            android:id="@+id/action_play_pause"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
-        <ImageButton
-            android:id="@+id/button_next"
-            android:layout_width="@dimen/zero_dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_baseline_play_circle_outline_32"
+            android:gravity="center"
+            android:padding="8dp"
+            android:scaleType="fitCenter" />
+        <ImageView
+            android:id="@+id/action_next"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            />
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_outline_fast_forward_32"
+            android:gravity="center"
+            android:padding="8dp"
+            android:scaleType="fitCenter" />
     </LinearLayout>
 </LinearLayout>
