--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="eight_dp">8dp</dimen>
     <dimen name="material_generic">16dp</dimen>
     <dimen name="material_sheet_peek_height">400dp</dimen>
+    <dimen name="twelve_dp">12dp</dimen>
+    <dimen name="six_dp">6dp</dimen>
+    <dimen name="fourty_eight">48dp</dimen>
 </resources>
