--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path name="external_files" path="."/>
+    <external-path path="Android/data/${applicationId}/" name="package_root" />
+    <cache-path path="Android/data/${applicationId}/" name="cache" />
+    <!--
+    root-path is suggested in https://stackoverflow.com/q/42516126
+    as a workaround to access files only accessible via root
+    -->
+    <root-path path="." name="storage_root" />
+<!--    <external-path name="external_files" path="."/>-->
 </paths>
