--- a/app/src/main/res/layout/epub_viewer_activity.xml
+++ b/app/src/main/res/layout/epub_viewer_activity.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <Spinner
+    <ProgressBar
         android:id="@+id/loading_spinner"
         android:layout_width="@dimen/zero_dp"
         android:layout_height="wrap_content"
@@ -13,12 +13,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
     <TextView
-        android:layout_width="@dimen/zero_dp"
-        android:layout_height="@dimen/zero_dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/loading_spinner"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="@dimen/material_generic"
+        android:layout_margin="@dimen/material_generic"
         android:text="@string/loading"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
