Add media labels in files tab

--- a/app/src/main/res/layout/fragment_analyse.xml
+++ b/app/src/main/res/layout/fragment_analyse.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home_page.ui.home.AnalyseFragment"
+    tools:context=".home_page.ui.analyse.AnalyseFragment"
     android:background="@android:color/transparent">
 
     <TextView
