--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_analyse"
-        android:name="com.amaze.fileutilities.home_page.ui.home.AnalyseFragment"
+        android:name="com.amaze.fileutilities.home_page.ui.analyse.AnalyseFragment"
         android:label="@string/title_analyse"
         tools:layout="@layout/fragment_analyse" />
 
     <fragment
         android:id="@+id/navigation_files"
-        android:name="com.amaze.fileutilities.home_page.ui.dashboard.FilesFragment"
+        android:name="com.amaze.fileutilities.home_page.ui.files.FilesFragment"
         android:label="@string/title_files"
         tools:layout="@layout/fragment_files" />
 
     <fragment
         android:id="@+id/navigation_transfer"
-        android:name="com.amaze.fileutilities.home_page.ui.notifications.TransferFragment"
+        android:name="com.amaze.fileutilities.home_page.ui.transfer.TransferFragment"
         android:label="@string/title_transfer"
         tools:layout="@layout/fragment_transfer" />
 </navigation>
