Implement homescreen livedata models

--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -27,10 +27,9 @@
                 android:layout_weight="1"
                 app:pcv_mode="ring"
                 app:pcv_orientation="clockwise"
-                app:pcv_animDuration="800"
-                app:pcv_animInterpolator="accelerate_decelerate"
-                app:pcv_progress="80"
+                app:pcv_animDuration="2000"
                 app:pcv_startAngle="270"
+                app:pcv_animInterpolator="accelerate_decelerate"
                 app:pcv_drawBackground="false"
                 app:pcv_typeface="interstellar.ttf"
                 app:pcv_drawBackgroundBar="true"
@@ -61,7 +60,7 @@
                     android:id="@+id/files_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="49 items"
+                    android:text="-- items"
                     android:textSize="@dimen/twelve_sp"
                     android:textColor="@color/gray_text"
                     />
@@ -69,10 +68,10 @@
                     android:id="@+id/used_space"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:titleText="499 GB"
+                    app:titleText="@string/undetermined"
                     app:titleTextSize="@dimen/twelve_sp"
                     app:titleTextColor="@color/white_translucent_2"
-                    app:labelColor="@color/blue"
+                    app:labelColor="@color/green"
                     android:layout_marginTop="@dimen/material_generic"
                     />
                 <com.amaze.fileutilities.home_page.ui.CircleColorView
@@ -80,7 +79,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/six_dp"
-                    app:titleText="400 GB"
+                    app:titleText="@string/undetermined"
                     app:titleTextSize="@dimen/twelve_sp"
                     app:titleTextColor="@color/white_translucent_2"
                     app:labelColor="@color/white_translucent_2"
