--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="peach">#ff9195</color>
     <color name="yellow">#fbc33d</color>
     <color name="green">#85df66</color>
+    <color name="orange">#FF7F50</color>
+    <color name="red">#FF5733</color>
 </resources>
