--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,8 @@
     <dimen name="sixteen_sp">16sp</dimen>
     <dimen name="twelve_sp">12sp</dimen>
     <dimen name="eight_sp">12sp</dimen>
+    <dimen name="fastscroller_track_height">70dp</dimen>
+    <dimen name="fastscroller_track_padding">3dp</dimen>
+    <dimen name="minimal_row_size">72dp</dimen>
+    <dimen name="minimal_icon_size">40dp</dimen>
 </resources>
