--- a/app/src/main/res/layout/media_info_row_layout.xml
+++ b/app/src/main/res/layout/media_info_row_layout.xml
@@ -10,9 +10,10 @@
     android:paddingRight="@dimen/material_generic"
     android:paddingEnd="@dimen/material_generic"
     android:layout_gravity="center_vertical"
+    android:background="@null"
     >
     <ImageView
-        android:id="@+id/recent_icon"
+        android:id="@+id/icon_view"
         android:layout_width="@dimen/minimal_icon_size"
         android:layout_height="@dimen/minimal_icon_size"
         android:scaleType="centerCrop"
@@ -24,8 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_toRightOf="@id/recent_icon"
-        android:layout_toEndOf="@id/recent_icon"
+        android:layout_toRightOf="@id/icon_view"
+        android:layout_toEndOf="@id/icon_view"
         android:gravity="center_vertical"
         >
         <TextView
