--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fifty_six_dp">56dp</dimen>
 
     <dimen name="eighteen_sp">18sp</dimen>
     <dimen name="fourteen_sp">14sp</dimen>
@@ -24,4 +25,6 @@
     <dimen name="fastscroller_track_padding">3dp</dimen>
     <dimen name="minimal_row_size">72dp</dimen>
     <dimen name="minimal_icon_size">40dp</dimen>
+    <dimen name="list_header_height">48dp</dimen>
+    <dimen name="list_header_textsize">16sp</dimen>
 </resources>
