--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="zero_dp">0dp</dimen>
     <dimen name="eight_dp">8dp</dimen>
     <dimen name="material_generic">16dp</dimen>
+    <dimen name="twenty_four_dp">24dp</dimen>
     <dimen name="material_generic_medium">32dp</dimen>
     <dimen name="material_generic_large">72dp</dimen>
     <dimen name="material_sheet_peek_height">400dp</dimen>
