--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".home_page.ui.files.FilesFragment"
-        android:background="@android:color/transparent"
+        android:background="@null"
         android:padding="@dimen/material_generic_medium"
         android:orientation="vertical"
         >
@@ -17,7 +17,6 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/files_tab_heights"
             android:background="@drawable/background_curved"
-            android:foreground="@drawable/ripple"
             android:orientation="horizontal"
             android:padding="@dimen/material_generic"
             >
