--- a/app/src/main/res/layout/media_info_row_layout.xml
+++ b/app/src/main/res/layout/media_info_row_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/row_layout_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="@dimen/minimal_row_size"
@@ -22,6 +23,7 @@
         android:layout_alignParentStart="true"
         android:background="@drawable/circle_shape"
         android:gravity="center_vertical"
+        android:clickable="false"
         />
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,6 +32,7 @@
         android:layout_toRightOf="@id/icon_view"
         android:layout_toEndOf="@id/icon_view"
         android:gravity="center_vertical"
+        android:clickable="false"
         >
         <TextView
             android:id="@+id/info_title"
@@ -56,5 +59,6 @@
         android:gravity="center_vertical"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:clickable="false"
         />
 </RelativeLayout>
