--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,9 @@
         <attr name="mediaImageSrc" format="reference" />
         <attr name="themeColor" format="color" />
     </declare-styleable>
+    <declare-styleable name="MediaTypeHeaderView">
+        <attr name="typeImageSrc" format="reference" />
+        <attr name="backgroundImageSrc" format="reference" />
+        <attr name="headerThemeColor" format="color" />
+    </declare-styleable>
 </resources>
