--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -7,7 +7,7 @@
     android:background="@color/navy_blue"
     >
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/imagesListView"
+        android:id="@+id/audiosListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"
@@ -23,7 +23,7 @@
         android:gravity="center_horizontal"
         />
     <TextView
-        android:id="@+id/imagesListInfoText"
+        android:id="@+id/audiosListInfoText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/material_generic"
