Add search fragment

--- a/app/src/main/res/drawable/background_curved.xml
+++ b/app/src/main/res/drawable/background_curved.xml
@@ -7,5 +7,5 @@
         android:bottomLeftRadius="@dimen/material_generic_medium"
         android:bottomRightRadius="@dimen/material_generic_medium"
         />
-    <solid android:color="@color/white_translucent" />
+    <solid android:color="@color/navy_blue_alt" />
 </shape>
