--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@null"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -33,7 +34,7 @@
                 app:pcv_drawBackground="false"
                 app:pcv_typeface="interstellar.ttf"
                 app:pcv_drawBackgroundBar="true"
-                app:pcv_backgroundBarColor="@color/white_translucent_2"
+                app:pcv_backgroundBarColor="@color/white_grey_1"
                 app:pcv_textSize="@dimen/eighteen_sp"
                 />
             <LinearLayout
@@ -70,7 +71,7 @@
                     android:layout_height="wrap_content"
                     app:titleText="@string/undetermined"
                     app:titleTextSize="@dimen/twelve_sp"
-                    app:titleTextColor="@color/white_translucent_2"
+                    app:titleTextColor="@color/white_grey_1"
                     app:labelColor="@color/green"
                     android:layout_marginTop="@dimen/material_generic"
                     />
@@ -81,8 +82,8 @@
                     android:layout_marginTop="@dimen/six_dp"
                     app:titleText="@string/undetermined"
                     app:titleTextSize="@dimen/twelve_sp"
-                    app:titleTextColor="@color/white_translucent_2"
-                    app:labelColor="@color/white_translucent_2"
+                    app:titleTextColor="@color/white_grey_1"
+                    app:labelColor="@color/white_grey_1"
                     />
             </LinearLayout>
         </LinearLayout>
