--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -7,12 +7,13 @@
     android:background="@color/navy_blue"
     >
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/videosListView"
+        android:id="@+id/searchListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"
         android:scrollbars="none"
         android:descendantFocusability="afterDescendants"
+        android:layout_margin="@dimen/material_generic_medium"
         />
     <ProgressBar
         android:id="@+id/loadingProgress"
@@ -22,7 +23,7 @@
         android:gravity="center_horizontal"
         />
     <TextView
-        android:id="@+id/videosListInfoText"
+        android:id="@+id/searchInfoText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/material_generic"
