--- a/app/src/main/res/layout/media_type_header_layout.xml
+++ b/app/src/main/res/layout/media_type_header_layout.xml
@@ -36,7 +36,7 @@
                 android:layout_width="@dimen/zero_dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.8"
-                app:trackColor="@color/white_translucent_2"
+                app:trackColor="@color/white_grey_1"
                 app:indicatorDirectionLinear="leftToRight"
                 app:indicatorColor="@color/white"
                 app:trackThickness="@dimen/eight_dp"
